# excursionist

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
excursionist/: scrapy.cfg
excursionist/excursionist/: db.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
excursionist/excursionist/spiders/: expedia.py  flights.py  kayak.py  skiplagged.py
